--- a/HW18.html
+++ b/HW18.html
@@ -16,7 +16,7 @@
 
 <script>
     const canv = document.getElementById("canvas");
-    ctx = canv.getContext('2d');
+    const ctx = canv.getContext('2d');
 
     const coefForRadius = 0.8;
     const coefForNumber = 0.15;
