--- a/HW19.html
+++ b/HW19.html
@@ -35,12 +35,12 @@
 <div id="clock4" class="clock"></div>
 <script>
 
-    const coefForRadius = 0.8;
-    const coefForNumber = 0.15;
-    const coefForSecArrow = 0.7;
-    const coefForMinArrow = 0.5;
-    const coefForHourArrow = 0.3;
-    const coefForCenterHeight = 0.95;
+    const COEF_FOR_RADIUS = 0.8;
+    const COEF_FOR_NUMBER = 0.15;
+    const COEF_FOR_SEC_ARROW = 0.7;
+    const COEF_FOR_MIN_ARROW = 0.5;
+    const COEF_FOR_HOUR_ARROW = 0.3;
+    const COEF_FOR_CENTER_HEIGHT = 0.95;
 
     class Clock {
         constructor(id, type, city, gmt) {
@@ -87,14 +87,14 @@
             this.element = document.querySelector(`#${id}`);
             this.width = this.element.offsetWidth;
             this.height = this.element.offsetHeight;
-            this.radClock = this.width > (this.height * coefForCenterHeight) ? this.height * coefForCenterHeight / 2 : this.width / 2;
+            this.radClock = this.width > (this.height * COEF_FOR_CENTER_HEIGHT) ? this.height * COEF_FOR_CENTER_HEIGHT / 2 : this.width / 2;
             this.clockCenterWidth = this.width / 2;
-            this.clockCenterHeight = this.height - this.height * coefForCenterHeight / 2;
-            this.radNumb = this.radClock * coefForRadius;
-            this.radGreen = this.radClock * coefForNumber;
-            this.hourArrowLength = this.radClock * coefForHourArrow;
-            this.minArrowLength = this.radClock * coefForMinArrow;
-            this.secArrowLength = this.radClock * coefForSecArrow;
+            this.clockCenterHeight = this.height - this.height * COEF_FOR_CENTER_HEIGHT / 2;
+            this.radNumb = this.radClock * COEF_FOR_RADIUS;
+            this.radGreen = this.radClock * COEF_FOR_NUMBER;
+            this.hourArrowLength = this.radClock * COEF_FOR_HOUR_ARROW;
+            this.minArrowLength = this.radClock * COEF_FOR_MIN_ARROW;
+            this.secArrowLength = this.radClock * COEF_FOR_SEC_ARROW;
             this.city = city;
         }
         drawButtons() {
