--- a/HW20.html
+++ b/HW20.html
@@ -141,10 +141,24 @@
 
     function checkUp(ball, ballSpeed) {
         if (parseFloat(ball.style.top) <= 0) {
-            ballSpeed.direction = "down";
+            switch (ballSpeed.direction) {
+                case "up":
+                    ballSpeed.direction = "down";
+                    break;
+                case "down":
+                    ballSpeed.direction = "up";
+                    break;
+            }
         }
         if (parseFloat(ball.style.top)+ DIAM_BALL >= FIELD_HEIGHT) {
-            ballSpeed.direction = "up";
+            switch (ballSpeed.direction) {
+                case "up":
+                    ballSpeed.direction = "down";
+                    break;
+                case "down":
+                    ballSpeed.direction = "up";
+                    break;
+            }
         }
     }
 
