--- a/HW14.html
+++ b/HW14.html
@@ -18,7 +18,7 @@
         }
 
         .user-field {
-            width: 60%;
+            width: 40%;
             font-size: 18px;
             height: 20px;
             line-height: 18px;
@@ -76,8 +76,8 @@
         .area-field {
             position: absolute;
             left: 200px;
-            width: 50%;
-            max-width: 50%;
+            width: 40%;
+            max-width: 40%;
             height: 50px;
         }
 
@@ -88,7 +88,7 @@
         .err-value {
             color: red;
             position: absolute;
-            right: 0;
+            left: calc(40% + 210px);
             top: 0;
         }
 
